# tldw

./: .dockerignore  .tool-versions  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  check.sh  pyproject.toml  requirements.txt  run.sh  tldw
.gitea/workflows/: deploy.yml  tag-deployed.yml  test.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_slug.py
app/: database.py  llm.py  main.py  models.py  summarizer.py  worker.py
app/templates/: index.html
tests/: conftest.py  test_llm.py  test_routes.py  test_summarizer.py  test_worker.py
