[project]
name = "tldw"
version = "0.1.0"
description = "Too long; didn't watch — YouTube transcript summarizer (FastAPI + Ollama)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "youtube-transcript-api>=1.2,<2",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "aiohttp>=3.10.0",
    "sse-starlette>=2.1.0",
]

[tool.uv]
package = false
