[project]
name = "tldw"
version = "0.1.0"
description = "Too long; didn't watch — YouTube transcript summarizer (FastAPI + Ollama)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "youtube-transcript-api>=1.2,<2",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "aiohttp>=3.10.0",
    "sse-starlette>=2.1.0",
    "alembic>=1.18.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ty>=0.0.55",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.src]
include = ["app", "tests"]
